# Advent-of-code

./: .gitignore  CMakeLists.txt
2023/: CMakeLists.txt  main.cpp
2023/Days/: Day.hpp  Day1.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day19.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Days2023.hpp
2023/Libraries/: utils.cpp  utils.hpp  utils.tpp
src/: main.cpp
src/Days/: Day.hpp  Day1.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day19.cpp  Day2.cpp  Day20.cpp  Day21.cpp  Day22.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Day8.cpp  Day9.cpp
src/Libraries/: utils.hpp  utils.tpp
